# casper-deployer-hackathon-oct-2022

./: .gitignore  README.md  SECURITY.md  casper-escrow.code-workspace  package-lock.json  package.json  vercel.json
.github/workflows/: jest.yml  jest_cypress.yml  main.yml
casper-sdk/pkg/: README.md  casper_rust_wasm_sdk.d.ts  casper_rust_wasm_sdk.js  casper_rust_wasm_sdk_bg.wasm  casper_rust_wasm_sdk_bg.wasm.d.ts  package.json
casper-sdk/pkg-nodejs/: README.md  casper_rust_wasm_sdk.d.ts  casper_rust_wasm_sdk.js  casper_rust_wasm_sdk_bg.wasm  casper_rust_wasm_sdk_bg.wasm.d.ts  package.json
casper/contracts/: Makefile
casper/contracts/contract-escrow/: Cargo.toml
casper/contracts/contract-test/: Cargo.toml
casper/contracts/tests/: Cargo.toml
casper/contracts/tests/src/: integration_tests.rs
casper/contracts/tests/wasm/: contract-test.wasm
docker/: Dockerfile  docker-compose.yml
wasm/: Cargo.toml  Makefile
wasm/pkg/: deployer.d.ts  deployer.js  deployer_bg.wasm  deployer_bg.wasm.d.ts  escrow.d.ts  escrow.js  escrow_bg  escrow_bg.wasm  escrow_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
wasm/src/utils/: js_fetch.rs  js_log.rs  mod.rs
wasm/www/utils/: fetch_item.js
www/: .gitignore  README.md  angular.json  custom-webpack.config.js  nx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  vercel.json
www/apps/api/: project.json  tsconfig.app.json
www/apps/escrow/: .eslintrc.json  jest.config.ts  project.json
www/apps/escrow-e2e/: project.json
www/coverage/: clover.xml  coverage-final.json  lcov.info
(+333 files in other folders)
