[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
wee_alloc = "*"
casper-contract = "1.4.4"
casper-types = "1.5.0"
js-sys = "*"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]
