[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
wee_alloc = "*"
casper-types = { version = "4.0.1", default-features = false }
js-sys = "*"
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.10", features = ["js"] }

[lib]
crate-type = ["cdylib"]
